<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
   
android:background="@drawable/layoutrectshape1"
    android:orientation="vertical" >

    

    <ImageView
        android:id="@+id/dialogimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:src="@drawable/foodicon"
         />

    <TextView
        android:id="@+id/dialogtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:text="@string/dialogtitle"
        android:textAppearance="?android:attr/textAppearanceLarge"

        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/dialogdesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/dialogdesc"
        android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_margin="10dp"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/dialogprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:text="@string/dialogprice"
        android:textAppearance="?android:attr/textAppearanceMedium"

        android:textColor="#ffffff" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
         android:layout_margin="10dp" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:text="@string/dialogqnty"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/qntytext1"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ems="10"
            android:inputType="number"
            android:text="@string/qntyzero"
            android:background="@drawable/edittextround" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/dialogbtn"
        android:layout_width="134dp"
        android:layout_height="32dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/buttonshape1"
        android:text="@string/dialogbtn"
        android:textColor="#ffffff" 
        android:layout_margin="10dip"/>
    

</LinearLayout>