<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/layoutrectshape1"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialogtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:gravity="center_horizontal"
        android:text="@string/deladd"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="1dp"
        android:text="@string/addname"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/addressname"
        style="@style/EditTextAppTheme"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="1dp"
        android:inputType="text" 
         android:textColor="#ffffff">

        <requestFocus />
    </EditText>

    
    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="1dp"
          android:text="@string/addPhone"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/addressphone"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="1dp"
        android:inputType="phone" 
      android:textColor="#ffffff"
      style="@style/EditTextAppTheme"
        >
    
    </EditText>
    
    
    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="1dp"
        android:text="@string/addAddrsStreet"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/addressstreet"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="1dp"
        android:inputType="textPostalAddress" 
    android:textColor="#ffffff"
    style="@style/EditTextAppTheme"
        >
   
    </EditText>
    
    
    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="1dp"
        android:text="@string/addAddrsArea"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/addressarea"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="1dp"
        android:inputType="text" 
     android:textColor="#ffffff"
     style="@style/EditTextAppTheme"
        >
 
    </EditText>
    
    
    <TextView
        android:id="@+id/tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="1dp"
        android:text="@string/addAddrsCity"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/addresscity"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="1dp"
        android:inputType="text" 
 android:textColor="#ffffff"
 style="@style/EditTextAppTheme"
        >
  
    </EditText>
    
    <TextView
        android:id="@+id/tv6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="1dp"
        android:text="@string/addAddrsPin"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/addresspin"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="1dp"
        android:inputType="phone" 
      android:textColor="#ffffff"
    style="@style/EditTextAppTheme"
        >

    </EditText>

    <Button
        android:id="@+id/addrsbtn1"
        android:layout_width="134dp"
        android:layout_height="32dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:background="@drawable/buttonshape1"
        android:text="@string/okbtn"
        android:textColor="#ffffff" />
    
</LinearLayout>