<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/delitmcartbtn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="#00000000"
            android:scaleType="centerInside"
            android:src="@drawable/deleteitem" 
             android:clickable="true"
       	    android:focusable="false"
 		    android:focusableInTouchMode="false"
            android:layout_marginTop="25dip"
            android:layout_marginBottom="25dip"
            android:layout_marginLeft="25dip"
            android:layout_marginRight="15dip"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" 
        android:layout_margin="5dip"
         android:gravity="left">

        <TextView
            android:id="@+id/itmcartTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogtitle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/itmcartqnty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listitemqnty"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/itmcartprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogprice"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dip"
        android:gravity="right"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/INR"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/itemtlcost"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_gravity="right"
            android:gravity="right"
            android:text="@string/cartsamp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff" />

    </LinearLayout>
    
</LinearLayout>